<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/shared_preferences_name"
    android:title="@string/nyan_settings_title">

    <PreferenceCategory android:title="Images">

        <ListPreference
            android:defaultValue="ics_egg"
            android:entries="@array/nyan_shapenames"
            android:entryValues="@array/nyan_shapeprefix"
            android:key="droid_image"
            android:summary="@string/nyan_image_summary"
            android:title="@string/nyan_image_title" />

        <ListPreference
            android:defaultValue="rainbow"
            android:entries="@array/rainbow_shapenames"
            android:entryValues="@array/rainbow_shapeprefixes"
            android:key="rainbow_image"
            android:summary="@string/rainbow_image_summary"
            android:title="@string/rainbow_image_title" />

        <ListPreference
            android:defaultValue="white"
            android:entries="@array/star_shapenames"
            android:entryValues="@array/star_shapeprefixes"
            android:key="star_image"
            android:summary="@string/star_image_summary"
            android:title="@string/star_image_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Speed">

        <SeekBarPreference
            android:defaultValue="3"
            android:key="animation_speed"
            android:max="10"
            android:summary="Adjust animation speed"
            android:title="Starfield speed" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Size">

        <SeekBarPreference
            android:defaultValue="2"
            android:key="size_mod"
            android:max="10"
            android:summary="Adjust image size"
            android:title="Image size" />

    </PreferenceCategory>

</PreferenceScreen>